# archimedes-tech-test

./: .gitignore  Makefile  README.md  json_data.json  pyproject.toml
.github/workflows/: github-actions.yml
src/: main.py
tests/: conftest.py  test_main.py
