[tool.poetry]
name = "archimedes-tech-test"
version = "0.1.0"
description = "Extract data from json and output enriched .csv"
authors = ["Brian Musonza <chitiyobrian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
